Feat(feature-cart):  Add dynamic page for document detail